@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7645 2004/11/01 21:52:33 jdolecek Exp $
+$NetBSD: CHANGES,v 1.7646 2004/11/01 22:10:22 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5008,3 +5008,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added pear-Net_Socket-1.0.1 [jdolecek 2004-11-01]
 	Added pear-HTTP_Request-1.2 [jdolecek 2004-11-01]
 	Added pear-SOAP-0.7.5 [jdolecek 2004-11-01]
+	Added php5-mysqli-5.0.2 [jdolecek 2004-11-01]
